--- a/flask_tutorial/Dockerfile
+++ b/flask_tutorial/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:slim
 WORKDIR /app/
 RUN pip install flask
-COPY flaskApp.py .
-CMD ["flask", "--app", "flaskApp", "run", "--port", "8000", "--host", "0.0.0.0"]
+COPY . .
+#COPY flaskApp.py .
+CMD [ "python", "flaskApp.py" ]
+#CMD ["flask", "--app", "flaskApp", "run", "--port", "8000", "--host", "0.0.0.0"]
 
 
