--- a/flask_tutorial/Dockerfile
+++ b/flask_tutorial/Dockerfile
@@ -3,7 +3,6 @@ WORKDIR /app/
 RUN pip install flask
 COPY . .
 #COPY flaskApp.py .
-CMD [ "python", "flaskApp.py" ]
-#CMD ["flask", "--app", "flaskApp", "run", "--port", "8000", "--host", "0.0.0.0"]
+CMD ["flask", "--app", "app", "run", "--port", "8000", "--host", "0.0.0.0"]
 
 
