--- a/express_test/Makefile
+++ b/express_test/Makefile
@@ -1,8 +1,6 @@
-DOCKER_IMAGE:=freeCycle
+DOCKER_IMAGE:=freecycle
 
 run: build 
 	docker run --rm -it --publish 8000:8000 ${DOCKER_IMAGE}
-run_shell: build 
-	docker run --rm -it --publish 8000:8000 --volume ${PWD}:/app/:ro --entrypoint /bin/sh ${DOCKER_IMAGE}
 build:
 	docker build --tag ${DOCKER_IMAGE} .
