--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,6 @@
 DOCKER_IMAGE:=server
 
+run: build 
+	docker run --rm -it --publish 8000:8000 ${DOCKER_IMAGE}
 build:
 	docker build --tag ${DOCKER_IMAGE} .
-
-test:
-	docker run --rm ${DOCKER_IMAGE}
