modified server/client readme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "editor.renderControlCharacters": true,
     "editor.bracketPairColorization.enabled": true,
     "cSpell.words": [
-        "jsonify"
+        "jsonify",
+        "Kieran"
     ]
 }
